<resources>
    <string name="app_name">Yuk Belajar</string>
    <string name="judul">Menghitung Kecepatan dan Jarak</string>
    <string name="intro">Kecepatan adalah besarnya jarak atau panjang lintasan dibagi dengan waktu. Jarak adalah kecepatan(v) dibagi dengan waktu(t). kita juga bisa menghitung kecepatan dengan mencari rumus kecepatan(v), jarak(s), dan waktu(t) yang ada.</string>
    <string name="jarak">Jarak (km)</string>
    <string name="waktu">Waktu (jam)</string>
    <string name="kecepatan">Kecepatan (km/jam)</string>
    <string name="hitung">Hitung</string>
    <string name="reset">Reset</string>
    <string name="hasilkecepatan">Kecepatan : %1$.2f km/jam</string>
    <string name="hasiljarak">Jarak : %1$.2f km</string>
    <string name="jarakKosong">Jarak Tidak Boleh Kosong!</string>
    <string name="waktuKosong">Waktu Tidak Boleh Kosong!</string>
    <string name="kecepatanKosong">Kecepatan Tidak Boleh Kosong!</string>
    <string name="judul_kecepatan">Rumus Mencari Kecepatan</string>
    <string name="judul_jarak">Rumus Mencari Jarak</string>
    <string name="rumus_kecepatan">Kecepatan(v) = Jarak(s) / Waktu(t)</string>
    <string name="rumus_jarak">Jarak(s) = Kecepatan(v) / Waktu(t)</string>
    <string name="rumus">RUMUS RUMUS PINTAR :)</string>
    <string name="lihat_rumus">Lihat Rumus</string>
    <string name="tentang_aplikasi">About App</string>
    <string name="isi">Aplikasi ini dibuat untuk mencari kecepatan dan jarak. dibuat oleh Ihsanudin Pradana Putra (6706204050)</string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_temp">Jarak : %1$s km\nWaktu : %2$s jam\nKecepatan : %3$s km/jam\n\nHasil Kecepatan\n%4$s\n%5$s</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="hasil_x">Hasil Kecepatan: %1$.2f km/jam - Jarak: %2$.2f jam</string>
    <string name="data_x">S: %1$.2f km - T: %2$.2f jam - V: %3$.2f km/jam</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Apakah Anda Ingin Menghapus Semua Histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="rumus2">Rumus</string>
    <string name="action_switch_layout">Ubah Layout</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="latihansoal">Latihan Soal</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data Latihan Soal otomatis</string>
    <string name="notif_title">Ada soal baru nihhh!</string>
    <string name="notif_text">Cek sekarang biar nggak gabut....</string>
</resources>