<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/hitungFragment">

    <fragment
        android:id="@+id/hitungFragment"
        android:name="org.d3if4050.yukbelajar.ui.hitung.HitungFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_hitung">
        <action
            android:id="@+id/action_hitungFragment_to_rumusFragment"
            app:destination="@id/rumusFragment" />
        <action
            android:id="@+id/action_hitungFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_hitungFragment_to_historiFragment"
            app:destination="@id/historiFragment" />
        <action
            android:id="@+id/action_hitungFragment_to_latihanSoalFragment"
            app:destination="@id/latihanSoalFragment" />
    </fragment>
    <fragment
        android:id="@+id/rumusFragment"
        android:name="org.d3if4050.yukbelajar.ui.RumusFragment"
        android:label="@string/rumus2"
        tools:layout="@layout/fragment_lihatrumus" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.d3if4050.yukbelajar.ui.AboutFragment"
        android:label="@string/tentang_aplikasi"
        tools:layout="@layout/fragment_tentang" />
    <fragment
        android:id="@+id/historiFragment"
        android:name="org.d3if4050.yukbelajar.ui.histori.HistoriFragment"
        android:label="@string/histori"
        tools:layout="@layout/fragment_histori" />
    <fragment
        android:id="@+id/latihanSoalFragment"
        android:name="org.d3if4050.yukbelajar.ui.latihansoal.LatihanSoalFragment"
        android:label="Latihan Soal"
        tools:layout="@layout/tampilan_list"/>
</navigation>